--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ form{
 }
 .container{
     /* width:100%; */
-    margin: 50px 400px
+    margin: 5% 5%;
 }
-
+@media screen and (min-width: 800px){
+    .container{
+        margin: 5% 25%;
+    }
+}
